--- a/styles/base.css
+++ b/styles/base.css
@@ -15,7 +15,7 @@
   
   h1, h2 {
     font-weight: bold;
-    color: #2E4053;
+    color: #fff;
   }
   
   h1 {
@@ -77,40 +77,55 @@
   /* Main Styles */
   
   main {
-    max-width: 800px;
-    margin: 40px auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    padding: 10px;
   }
-  
-  main > * {
-    margin-bottom: 20px;
-  }
-  
+
+
   .card {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    padding: 20px;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto, auto, auto, auto;
+    grid-gap: 10px;
     background-color: #fff;
     border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 1000px;
   }
   
   .card h2 {
-    grid-column: 1 / -1;
+    grid-column: 1 / 5;
+    grid-row: 1/2;
+    border-radius: 10px;
+    background-color: #2E4053;
+    text-align: center;
+    height: fit-content;
   }
   
   .card img {
+    grid-column: 4 / 5;
+    grid-row: 2/3;
     width: 100%;
-    height: 150px;
+    height: 100%;
     object-fit: cover;
     border-radius: 10px;
   }
   
   .card p {
-    grid-column: 1 / -1;
+    grid-column: 1 / 3;
+    grid-row: 2/3;
+    width: fit-content;
+    height: fit-content;
+  }
+  
+  .resource {
+    grid-column: 1 / 5;
+    grid-row: 2/5;
+    text-align: center;
   }
   
   /* Footer Styles */
