--- a/styles/base.css
+++ b/styles/base.css
@@ -13,52 +13,37 @@
     background-color: #f7f7f7;
   }
   
-  h1, h2 {
-    font-weight: bold;
-    color: #fff;
-  }
-  
-  h1 {
-    font-size: 36px;
-  }
-  
-  h2 {
-    font-size: 24px;
-  }
-  
   a {
     text-decoration: none;
     color: #337AB7;
   }
   
-  a:hover {
-    color: #23527C;
-  }
-  
+
   /* Header Styles */
   
   header {
     background-color: #2E4053;
-    padding: 20px;
+    padding: 0;
     text-align: center;
-    color: #fff;
   }
   
   header h1 {
     margin-bottom: 10px;
+    font-size: 36px;
+    color: #fff;
   }
   
   nav {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
     align-items: center;
+    background-color: #a1aebe;
   }
   
   nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    display: flex;
   }
   
   nav li {
@@ -66,12 +51,14 @@
   }
   
   nav a {
-    color: #fff;
+    color: #2E4053;
+    font-size: 20px;
+    font-weight: bold;
     transition: color 0.2s ease;
   }
   
   nav a:hover {
-    color: #ccc;
+    background-color: #c5d2e2;
   }
   
   /* Main Styles */
@@ -80,18 +67,20 @@
     display: flex;
     justify-content: center;
     padding: 10px;
+    max-width: 1900px;
+    margin: 0 auto;
   }
 
 
   .card {
     display: grid;
     grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto, auto, auto, auto;
+    grid-template-rows: auto, auto, auto, auto, auto;
     grid-gap: 10px;
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 10px;
-    padding: 10px;
+ 
     margin: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 1000px;
@@ -100,28 +89,86 @@
   .card h2 {
     grid-column: 1 / 5;
     grid-row: 1/2;
-    border-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     background-color: #2E4053;
     text-align: center;
+    font-size: 26;
     height: fit-content;
+    font-size: 24px;
+    color: #fff;
+  }
+
+  .card h3 {
+    grid-column: 1 / 5;
+    grid-row: 3/4;
+    text-align: center;
+    border-bottom: 1px solid #2E4053;
+    margin-left: 75px;
+    margin-right: 75px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 26px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
   
-  .card img {
+  .me {
     grid-column: 4 / 5;
     grid-row: 2/3;
-    width: 100%;
-    height: 100%;
+    width: 150px;
+    height: 200px;
     object-fit: cover;
-    border-radius: 10px;
+    margin-right: 30px;
+    margin-top: 10px;
+    margin-left: 10px;
+    border: 1px solid #333;
+  }
+
+  .flag {
+    grid-column: 1 / 2;
+    grid-row: 4/5;
+    width: 250px;
+    height: 150px;
+    object-fit: cover;
+    margin-left: 30px;
+    margin-top: 10px;
+    margin-right: 10px;
+    border: 1px solid #333;
   }
   
-  .card p {
-    grid-column: 1 / 3;
+  .card p1 {
+    grid-column: 1 / 4;
     grid-row: 2/3;
+    font-size: 19px;
+    margin-left: 30px;
+    margin-top: 30px;
     width: fit-content;
     height: fit-content;
+    font-weight: bold;
+  }
+
+  .card p2 {
+    grid-column: 2 / 5;
+    grid-row: 4/6;
+    margin-right: 30px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: fit-content;
+    height: fit-content;
+    font-weight: bold;
+    font-size: 19px;
   }
   
+  .card p3 {
+    grid-column: 1 / 2;
+    grid-row: 5/6;
+    margin-left: 30px;
+    margin-right: 10px;
+    text-align: center;
+    font-style: italic;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  }
+
   .resource {
     grid-column: 1 / 5;
     grid-row: 2/5;
