--- a/styles/base.css
+++ b/styles/base.css
@@ -136,7 +136,7 @@
     border: 1px solid #333;
   }
   
-  .card p1 {
+  .card p {
     grid-column: 1 / 4;
     grid-row: 2/3;
     font-size: 19px;
@@ -147,7 +147,7 @@
     font-weight: bold;
   }
 
-  .card p2 {
+  .card p:nth-child(2) {
     grid-column: 2 / 5;
     grid-row: 4/6;
     margin-right: 30px;
@@ -159,12 +159,13 @@
     font-size: 19px;
   }
   
-  .card p3 {
+  .card p:last-child {
     grid-column: 1 / 2;
     grid-row: 5/6;
-    margin-left: 30px;
+    font-size: 15px;
+    margin-left: 55px;
     margin-right: 10px;
-    text-align: center;
+    margin-bottom: 50px;
     font-style: italic;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
