--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -1,38 +1,27 @@
-@media screen and (min-width: 600px) {
-  nav ul {
-    display: flex !important; 
-    flex-direction: row !important;
-    gap: 20px;
-    justify-content: center;
-    max-width: 640px;
-    margin: 1rem auto;
-    align-items: center;
-  }
+
+@media (min-width: 750px) {
   header {
-    display: flex;
-    justify-content: center !important;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 1.5rem;
   }
 
-  nav ul li {
-    margin: 0 15px;
+  .navigation {
+      justify-content: flex-end;
+      flex-direction: row;
+
   }
 
-  #hamburger {
-    display: none;
+  .navigation a {
+      display: block;
+      padding: 1rem;
+      flex: 1 1 100%;
   }
 
-  main {
-    max-width: 1200px;
-    margin: auto;
+  #menu {
+      display: none; 
   }
 
-  figure {
-    display: inline-block;
-    width: 30%;
-    margin: 1.5%;
-  }
-
-  img {
-    width: 100%;
-  }
+  
 }
