--- a/styles/temples.css
+++ b/styles/temples.css
@@ -1,73 +1,173 @@
+:root {
+
+    /* Color Pallete */
+    --primary-color: #385f8a;
+    --secondary-color: #413633;
+    --accent1-color: #415A77;
+    --accent2-color: #778DA9;
+    --accent3: #FDF7F4;
+
+    /* Fonts */
+    --poppins-regular: "Poppins", sans-serif;
+    --poppins-regular-weight: 400;
+    --poppins-thin: "Poppins", sans-serif;
+    --poppins-thin-weight: 100;
+
+
+    --headline-color-on-white: var(--primary-color);
+    /* headlines on a white background */
+    --headline-color-on-color: var(--accent3);
+    /* headlines on a colored background */
+    --paragraph-color-on-white: var(--primary-color);
+    /* paragraph text on a white background */
+    --paragraph-color-on-color: var(--accent3-color);
+    /* paragraph text on a colored background */
+    --paragraph-background-color: var(--secondary-color);
+    --nav-link-color: var(--accent3);
+    --nav-background-color: var(--secondary-color);
+    --nav-hover-link-color: var(--accent2-color);
+    --nav-hover-background-color: var(--primary-color);
+}
+
+
+/* general */
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
-  font-family: "Your Google Font", sans-serif;
-  margin: 0;
-  padding: 0;
+    font-family: var(--poppins-regular);
+    font-weight: var(--poppins-regular-weight);
+}
+
+
+/* mobile **************************/
+h1,
+h2 {
+    font-family: var(--heading-font);
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+    font-size: 2rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+}
+
+p {
+    font-family: var(--paragraph-font);
+    margin: 0;
+    padding: 0;
 }
 
 header {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  background-color: #333;
-  font-size: 20px;
-  color: #fff;
-  padding: 10px;
+    background-color: var(--nav-background-color);
+    padding: 10px;
+    color: var(--headline-color-on-color);
 }
 
-nav ul {
-  display: none;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+
+header h1 {
+    margin: auto 5px;
 }
 
-nav ul li {
-  margin: 5px 0;
+#menu {
+    font-size: 2rem;
+    border: 0;
+    background-color: var(--nav-background-color);
+    color: var(--accent1-color);
+    position: absolute;
+    top: 1.2rem;
+    right: 1rem;
 }
 
-nav a {
-  color: #fff;
-  text-decoration: none;
+#menu::before {
+    content: "≡";
 }
 
-nav a:hover {
-  color: #f8918a;
-  text-decoration: none;
+#menu.open::before {
+    content: "❎";
 }
 
-#hamburger {
-  background: none;
-  border: none;
-  color: #fff;
-  font-size: 24px;
-  cursor: pointer;
+.navigation {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
 }
 
-.grid {
-  display: grid;
+.navigation a {
+    display: none;
+    padding: 1rem;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1rem;
+    color: var(--nav-link-color);
+    width: 100%;
 }
+
+.navigation a:hover {
+    color: var(--accent3);
+    text-decoration: underline 2px solid var(--accent3);
+    transition: all 5ms ease-in-out;
+
+}
+
+
+.open a {
+    display: block;
+    font-size: 1.5rem;
+}
+
+.hidden {
+    display: none;
+}
+
+/* main */
 
 main {
-  padding: 20px;
+    margin: 1rem auto;
+    max-width: 730px;
+}
+
+.home {
+
+    border-bottom: 1px solid #777;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 25px;
+    place-items: center;
+    margin: 5px 20px;
 }
 
 figure {
-  margin: 10px 0;
+    background-color: #fff;
 }
 
 img {
-  width: 100%;
-  height: auto;
+    width: 100%;
+    height: auto;
 }
 
-footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 10px;
+figcaption {
+    font-size: smaller;
+    text-align: center;
+}
 
-  clear: both;
-  position: relative;
-  height: 200px;
-  margin-top: 5vh;
+
+/* Footer */
+
+footer {
+    background-color: var(--nav-background-color);
+    color: var(--headline-color-on-color);
+    text-align: center;
+    padding: 1rem;
 }
