--- a/styles/temples.css
+++ b/styles/temples.css
@@ -2,7 +2,7 @@
 
     /* Color Pallete */
     --primary-color: #385f8a;
-    --secondary-color: #413633;
+    --secondary-color: #2E4053;
     --accent1-color: #415A77;
     --accent2-color: #778DA9;
     --accent3: #FDF7F4;
