--- a/styles/base.css
+++ b/styles/base.css
@@ -26,7 +26,6 @@
   header {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
-    font-style: normal;
     background-color: #2E4053;
     padding: 0;
     text-align: center;
@@ -34,8 +33,9 @@
   
   header h1 {
     margin-bottom: 10px;
-    font-size: 36px;
+    font-size: 1.7rem;
     color: #fff;
+    padding: 10px;
   }
   
   nav {
@@ -57,7 +57,7 @@
   
   nav a {
     color: #2E4053;
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: bold;
     transition: color 0.2s ease;
   }
@@ -86,7 +86,7 @@
     border: 1px solid #ddd;
     border-radius: 10px;
  
-    margin: 5px;
+    margin: 0 auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 1000px;
   }
@@ -98,9 +98,8 @@
     border-top-right-radius: 10px;
     background-color: #2E4053;
     text-align: center;
-    font-size: 26px;
     height: fit-content;
-    font-size: 24px;
+    font-size: 1.3rem;
     color: #fff;
   }
 
@@ -113,10 +112,23 @@
     margin-right: 75px;
     margin-top: 15px;
     margin-bottom: 15px;
-    font-size: 26px;
+    font-size: 1.5rem;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
   
+  .card-thin {
+    width: 400px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .card-thick {
+  width: 1800px;
+  margin-right: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  }
+
   .me {
     grid-column: 4 / 5;
     grid-row: 2/3;
@@ -179,6 +191,8 @@
     grid-column: 1 / 5;
     grid-row: 2/5;
     text-align: center;
+    font-size: 20px;
+
   }
 
   ul.no-bullets {
