--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -84,12 +84,13 @@ header h1 {
 
 .navigation a {
     display: none;
-    padding: 1rem;
+    padding: 0.2 rem;
     text-align: center;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 18px;
     color: var(--nav-link-color);
-
+    border: 1px solid #fdf7f475;
+    border-radius: 5px;
 }
 
 .navigation a:hover {
