--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -94,9 +94,9 @@ header h1 {
 }
 
 .navigation a:hover {
-    color: var(--accent3);
-    text-decoration: underline 2px solid var(--accent3);
-    transition: all 5ms ease-in-out;
+    background-color: var(--accent2-color);
+    color: #fff; /* Change text color to white */
+    transition: background-color 0.3s ease;
 }
 
 .open a {
