--- a/styles/form.css
+++ b/styles/form.css
@@ -5,7 +5,7 @@
     --accent1-color: #415A77;
     --accent2-color: #778DA9;
     --accent3: #FDF7F4;
-    --hover-color: orange;
+    --hover-color: gold;
 
 
 
