--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -14,7 +14,7 @@
     --true-blue: #0466c8ff;
     --sapphire: #0353a4ff;
     --yale-blue: #023e7dff;
-    --oxford-blue: #002855ff;
+    --oxford-blue: #2E4053;
     --oxford-blue-2: #001845ff;
     --oxford-blue-3: #001233ff;
     --delft-blue: #33415cff;
@@ -78,11 +78,17 @@ header {
     position: relative;
     font-size: 2.5rem;
     max-width: 100%;
+    border-bottom-left-radius: 1rem; 
+    border-bottom-right-radius: 1rem; 
 }
 
 header img {
     width: 120px;
     height: 120px;
+}
+
+.intro-img img {
+    border-radius: 1.5rem; /* Adjust the value as needed for more or less rounding */
 }
 
 #menu {
@@ -128,22 +134,18 @@ main {
 }
 
 .navigation a {
-    display: none;
-    padding: 1rem;
-    text-decoration: none;
-    margin: 10px;
-    margin-right: 30px;
-    border-radius: 5px;
-    font-size: 1.3rem;
-    color: var(--alice-blue);
-    font-family: var(--lato-regular-font-family);
+    display: block; /* Ensure the links are block elements */
+    border:  solid 1px;
+    border-radius: 0.5rem;
+    padding: 1rem; /* Adjust padding as needed */
+    text-decoration: none; /* Remove underline */
+    color: var(--alice-blue); /* Set the text color */
+    transition: background-color 0.3s ease; /* Smooth transition for background color */
 }
 
-
-.navigation a:hover {
-    font-weight: bold;
-    text-decoration: underline 2px solid var(--alice-blue);
-    transition: all 0.3s ease-in-out;
+.navigation a:hover {   
+    background-color: #778DA9; /* Change to your desired highlight color */
+    color: var(--alice-blue); /* Keep text color the same or change if needed */
 }
 
 .navigation.open a {
