--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -167,6 +167,8 @@ footer {
     padding: 20px 0;
     margin-top: 20px;
     font-weight: bold;
+    border-top-left-radius: 1rem; 
+    border-top-right-radius: 1rem; 
 }
 
 footer p {
