--- a/project/styles/contact.css
+++ b/project/styles/contact.css
@@ -6,7 +6,7 @@
     align-items: center;
     margin: 0 auto;
     padding: 20px;
-    background-color: var(--alice-blue);
+    background-color: #F0F0EE;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -72,16 +72,16 @@
 .form-container button {
     width: 100%;
     padding: 10px;
-    background-color: var(--b-on-color);
+    background-color: #31648656;
     color: var(--alice-blue);
-    border: none;
+    border: groove 2px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .form-container button:hover {
-    background-color: var(--b-strong-color);
+    background-color: #778DA9;
     transform: translateY(-2px);
 }
 
@@ -96,10 +96,10 @@
 
 .final-contact h3 {
     margin-bottom: 10px;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .final-contact p {
     margin-bottom: 0;
-    font-size: 1.3rem;
+    font-size: 1rem;
 }
