--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -134,18 +134,18 @@ main {
 }
 
 .navigation a {
-    display: block; /* Ensure the links are block elements */
+    display: block; 
     border:  solid 1px;
     border-radius: 0.5rem;
-    padding: 1rem; /* Adjust padding as needed */
-    text-decoration: none; /* Remove underline */
-    color: var(--alice-blue); /* Set the text color */
-    transition: background-color 0.3s ease; /* Smooth transition for background color */
+    padding: 1rem; 
+    text-decoration: none; 
+    color: var(--alice-blue);
+    transition: background-color 0.3s ease; 
 }
 
 .navigation a:hover {   
-    background-color: #778DA9; /* Change to your desired highlight color */
-    color: var(--alice-blue); /* Keep text color the same or change if needed */
+    background-color: #778DA9; 
+    color: var(--alice-blue); 
 }
 
 .navigation.open a {
