--- a/project/styles/contact.css
+++ b/project/styles/contact.css
@@ -74,15 +74,16 @@
     padding: 10px;
     background-color: #31648656;
     color: var(--alice-blue);
-    border: groove 2px;
+    box-shadow: inset;
     border-radius: 5px;
+    border-color: #F0F0EE;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .form-container button:hover {
     background-color: #778DA9;
-    transform: translateY(-2px);
+    transform: translateY(2px);
 }
 
 .final-contact {
