--- a/project/styles/project.css
+++ b/project/styles/project.css
@@ -7,6 +7,7 @@
 }
 
 .project-card {
+    display: block; /* Make the anchor behave like a block element */
     max-width: 500px;
     height: 590px;
     background-color: var(--accent3-color-Platinum);
@@ -14,13 +15,15 @@
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 5px #0d1b2ac2;
-    margin-bottom: none;
-    transition: transform 0.3s ease;
+    margin-bottom: 30px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Add transition for smooth effect */
+    text-decoration: none; /* Remove underline from link */
+    color: inherit; /* Inherit color from parent element */
 }
 
 .project-card:hover {
-    transform: scale(1.03);
-    box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.2); /* Increase shadow on hover */
+    transform: scale(1.02); /* Scale up the card slightly on hover */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Increase shadow on hover */
 }
 
 .project-card img {
