--- a/styles/base.css
+++ b/styles/base.css
@@ -141,6 +141,7 @@
     margin-top: 10px;
     margin-left: 10px;
     border: 1px solid #333;
+    box-shadow: 0 0 5px;
   }
 
   .flag {
@@ -152,6 +153,7 @@
     margin-left: 30px;
     margin-top: 10px;
     margin-right: 10px;
+    box-shadow: 0 0 5px;
     border: 1px solid #333;
   }
   
