--- a/project/styles/home.css
+++ b/project/styles/home.css
@@ -19,10 +19,11 @@
     display: grid;
     grid-template-columns: 1fr auto 2fr;
     grid-template-rows: 1fr auto 1fr;
-    margin-top: 0;
+    margin-top: 1.5rem;
     margin-bottom: 30px;
     position: relative;
     overflow: hidden;
+    border-radius: 1rem;
 }
 
 .image-container {
@@ -52,6 +53,7 @@
     mix-blend-mode: multiply;
     pointer-events: none;
     z-index: 1;
+    border-radius: 1rem;
 }
 
 .image-container img {
