--- a/project/styles/contact.css
+++ b/project/styles/contact.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 auto;
+    margin: 1.5rem;
     padding: 20px;
     background-color: #F0F0EE;
     border-radius: 10px;
